[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-csv-cleaner"
version = "1.0.0"
description = "AI data cleaning environment"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "pandas",
    "pydantic",
    "openenv-core"
]

[project.scripts]
# This satisfies the "Missing [project.scripts] server entry point" error
server = "server.app:main"
